<resources>
    <string name="app_name">乐学英语</string>
    <string name="title_word">单词</string>
    <string name="title_listen">听力</string>
    <string name="title_essay">阅读</string>
    <string name="title_mine">我的</string>
    <string name="enter">进入应用</string>

    <string name="phone">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="find_password">请输入重置后的密码</string>
    <string name="password_again">再次确认密码</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码?</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="forget_pwd">找回密码</string>
    <string name="new_man">新用户?</string>
    <string name="register">点击注册</string>
    <string name="register1">注册</string>
    <string name="or">or</string>
    <string name="code">验证码</string>
    <string name="number">邀请码</string>
    <string name="login_code">验证码登录</string>
    <string name="rule">接受条例</string>
    <string name="get_num">获取验证码</string>
    <string name="set">提交</string>
    <string name="title1">发现</string>
    <string name="title2">排雷区</string>
    <string name="food">美食</string>
    <string name="title3">社区</string>
    <string name="title4">我的</string>
    <string name="user_name">用户名</string>
    <string name="detailed">详细资料</string>
    <string name="collect">收藏</string>
    <string name="shopping">商城</string>
    <string name="packet">钱包</string>
    <string name="setting">设置</string>
    <string name="mine_setting">附近的人</string>
    <string name="head_icon">头像</string>
    <string name="_name">昵称</string>
    <string name="sex">性别</string>
    <string name="telephone">电话</string>
    <string name="email">邮箱</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="address">地址</string>
    <string name="signature">个性签名</string>
    <string name="modify_information">修改资料</string>
    <string name="vip_status">VIP状态</string>
    <string name="ent_setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="everyday">动态</string>
    <string name="com">社区</string>
    <string name="title">标题</string>
    <string name="message">内容</string>
    <string name="zang">点赞</string>
    <string name="shouchang">收藏</string>
    <string name="time">时间</string>
    <string name="publish">发布</string>
    <string name="my_d">我的动态</string>
    <string name="my_t">我的帖子</string>
    <string name="modify_pwd">修改密码</string>
    <string name="business_apply">商家申请</string>
    <string name="businessName">商铺名</string>
    <string name="bus_password">登录密码</string>
    <string name="bus_address">地址</string>
    <string name="iconPath">头像路径</string>
    <string name="bus_phone">手机号</string>
    <string name="lng">纬度</string>
    <string name="lat">经度</string>
    <string name="city">城市</string>
    <string name="credit">信用</string>
    <string name="city_food">食城记</string>
    <string name="radius">搜寻</string>
    <string name="radius1">半径</string>
    <string name="radius2">请输入半径</string>
    <string name="result">附近美食</string>
    <string name="today">今日动态</string>
    <string name="name">姓名</string>
    <string name="message2">内容</string>
</resources>