<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/forget_pwd"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et7"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="120dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et8"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="330dp"
        android:hint="@string/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/see_button"
        android:text="@string/set"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="160dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="396dp"
        android:background="@drawable/code_login_button"
        android:text="@string/get_num"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et9"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="190dp"
        android:inputType="textPassword"
        android:hint="@string/find_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et10"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="260dp"
        android:inputType="textPassword"
        android:hint="@string/password_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>