<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/button_forget"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/forget"
        android:textColor="@color/guide_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="218dp"
        android:layout_height="231dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/english" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="285dp"
        android:hint="@string/phone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/english" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="350dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/english" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/see_button"
        android:text="@string/login"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/new_man"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_toregister"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="@color/guide_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_code"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/code_login_button"
        android:textSize="18dp"
        android:text="@string/login_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>