<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/register1"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="120dp"
        android:hint="@string/phone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/english" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="190dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et7"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="400dp"
        android:hint="@string/number"
        android:inputType="text|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et5"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="330dp"
        android:inputType="number"
        android:hint="@string/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et6"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="260dp"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <CheckBox-->
    <!--        android:id="@+id/checkBox"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="52dp"-->
    <!--        android:layout_marginTop="456dp"-->
    <!--        android:text="@string/rule"-->
    <!--        android:textColor="@color/guide_three"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/see_button"
        android:text="@string/register1"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/code_login_button"
        android:text="@string/get_num"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>